--- a/package.json
+++ b/package.json
@@ -1,21 +1,161 @@
 {
-  "name": "todo-list",
+  "name": "todolist",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "this is backend of todo list",
+  "main": "server.js",
+  "dependencies": {
+    "abbrev": "^1.1.1",
+    "accepts": "^1.3.8",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "anymatch": "^3.1.3",
+    "array-flatten": "^1.1.1",
+    "balanced-match": "^1.0.2",
+    "base64-js": "^1.5.1",
+    "binary-extensions": "^2.2.0",
+    "body-parser": "^1.20.2",
+    "bowser": "^2.11.0",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "bson": "^4.7.2",
+    "buffer": "^5.7.1",
+    "bytes": "^3.1.2",
+    "call-bind": "^1.0.2",
+    "chokidar": "^3.5.3",
+    "cliui": "^7.0.4",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "concat-map": "^0.0.1",
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.5",
+    "cookie": "^0.5.0",
+    "cookie-signature": "^1.0.6",
+    "cors": "^2.8.5",
+    "debug": "^2.6.9",
+    "depd": "^2.0.0",
+    "destroy": "^1.2.0",
+    "ee-first": "^1.1.1",
+    "emoji-regex": "^8.0.0",
+    "encodeurl": "^1.0.2",
+    "escalade": "^3.1.1",
+    "escape-html": "^1.0.3",
+    "etag": "^1.8.1",
+    "express": "^4.18.2",
+    "fast-xml-parser": "^4.1.2",
+    "faye-websocket": "^0.11.4",
+    "fill-range": "^7.0.1",
+    "finalhandler": "^1.2.0",
+    "firebase": "^9.17.2",
+    "forwarded": "^0.2.0",
+    "fresh": "^0.5.2",
+    "function-bind": "^1.1.1",
+    "get-caller-file": "^2.0.5",
+    "get-intrinsic": "^1.2.0",
+    "glob-parent": "^5.1.2",
+    "has": "^1.0.3",
+    "has-flag": "^3.0.0",
+    "has-symbols": "^1.0.3",
+    "http-errors": "^2.0.0",
+    "http-parser-js": "^0.5.8",
+    "iconv-lite": "^0.4.24",
+    "idb": "^7.0.1",
+    "ieee754": "^1.2.1",
+    "ignore-by-default": "^1.0.1",
+    "inherits": "^2.0.4",
+    "ip": "^2.0.0",
+    "ipaddr.js": "^1.9.1",
+    "is-binary-path": "^2.1.0",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "kareem": "^2.5.1",
+    "lodash.camelcase": "^4.3.0",
+    "long": "^4.0.0",
+    "media-typer": "^0.3.0",
+    "memory-pager": "^1.5.0",
+    "merge-descriptors": "^1.0.1",
+    "methods": "^1.1.2",
+    "mime": "^1.6.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "minimatch": "^3.1.2",
+    "mongodb": "^4.14.0",
+    "mongodb-connection-string-url": "^2.6.0",
+    "mongoose": "^6.10.1",
+    "mpath": "^0.9.0",
+    "mquery": "^4.0.3",
+    "ms": "^2.0.0",
+    "negotiator": "^0.6.3",
+    "node-fetch": "^2.6.7",
+    "nodemon": "^2.0.21",
+    "nopt": "^1.0.10",
+    "normalize-path": "^3.0.0",
+    "object-assign": "^4.1.1",
+    "object-inspect": "^1.12.3",
+    "on-finished": "^2.4.1",
+    "parseurl": "^1.3.3",
+    "path-to-regexp": "^0.1.7",
+    "picomatch": "^2.3.1",
+    "protobufjs": "^6.11.3",
+    "proxy-addr": "^2.0.7",
+    "pstree.remy": "^1.1.8",
+    "punycode": "^2.3.0",
+    "qs": "^6.11.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.5.1",
+    "readdirp": "^3.6.0",
+    "require-directory": "^2.1.1",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "saslprep": "^1.0.3",
+    "semver": "^5.7.1",
+    "send": "^0.18.0",
+    "serve-static": "^1.15.0",
+    "setprototypeof": "^1.2.0",
+    "side-channel": "^1.0.4",
+    "sift": "^16.0.1",
+    "simple-update-notifier": "^1.1.0",
+    "smart-buffer": "^4.2.0",
+    "socks": "^2.7.1",
+    "sparse-bitfield": "^3.0.3",
+    "statuses": "^2.0.1",
+    "string-width": "^4.2.3",
+    "strip-ansi": "^6.0.1",
+    "strnum": "^1.0.5",
+    "supports-color": "^5.5.0",
+    "to-regex-range": "^5.0.1",
+    "toidentifier": "^1.0.1",
+    "touch": "^3.1.0",
+    "tr46": "^3.0.0",
+    "tslib": "^2.5.0",
+    "type-is": "^1.6.18",
+    "undefsafe": "^2.0.5",
+    "unpipe": "^1.0.0",
+    "utils-merge": "^1.0.1",
+    "uuid": "^8.3.2",
+    "vary": "^1.1.2",
+    "webidl-conversions": "^7.0.0",
+    "websocket-driver": "^0.7.4",
+    "websocket-extensions": "^0.1.4",
+    "whatwg-url": "^11.0.0",
+    "wrap-ansi": "^7.0.0",
+    "y18n": "^5.0.8",
+    "yargs": "^16.2.0",
+    "yargs-parser": "^20.2.9"
+  },
   "scripts": {
-    "dev":"nodemon server.js",
-    "build":"npm b",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Hussainshabdi/mern-pro-api.git"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mongoose": "^6.9.0"
+  "bugs": {
+    "url": "https://github.com/Hussainshabdi/mern-pro-api/issues"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
-  }
+  "homepage": "https://github.com/Hussainshabdi/mern-pro-api#readme"
 }
